[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dementor"
version = "1.0.0.dev20"
# REVISIT: dynamic version
# dynamic = ["version"]
description = "LLMNR/NBT-NS/mDNS Poisoner and rogue service provider"
readme = "docs/README.pypi.md"
license = "MIT"
# Python 3.11 required as tomllib was added in 3.11
requires-python = ">=3.11"
authors = [{ name = "MatrixEditor" }]
maintainers = [{ name = "MatrixEditor" }]
keywords = [
    "llmnr",
    "mdns",
    "nbt-ns",
    "network-security",
    "penetration-testing",
    "poisoner",
    "rogue-services",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "aiosmtpd",
    "aioquic",
    "caterpillar-py>=2.8.1",
    "impacket",
    "jinja2",
    "pyasn1",
    "pyipp",
    "rich",
    "scapy",
    "sqlalchemy",
    "typer",
    "typing-extensions",
]

[project.scripts]
dementor = "dementor.standalone:run_from_cli"
Dementor = "dementor.standalone:run_from_cli"

[project.urls]
Homepage = "https://matrixeditor.github.io/dementor"
Documentation = "https://matrixeditor.github.io/dementor"
Source = "https://github.com/MatrixEditor/dementor"
Issues = "https://github.com/MatrixEditor/dementor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dementor*"]

[tool.setuptools.package-data]
dementor = ["assets/**"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
docs = [
    "shibuya",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-design",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 90
src = ["dementor", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "E501",  # line too long — handled by formatter
    "I001",  # import order — project uses custom grouping
    "B010",  # do not call setattr with constant — used intentionally
]

[tool.ruff.format]
docstring-code-format = true

# REVISIT: dynamic version
# [tool.setuptools_scm]
# version_file = "dementor/version.py"
