[project]
name = "dementor"
version = "1.0.0.dev20"
# REVISIT: dynamic version
# dynamic = ["version"]
license-files = ["LICENSE"]

# Python 3.11 required as tomllib was added in 3.11
requires-python = ">=3.11"
description = "LLMNR/NBT-NS/mDNS Poisoner and rogue service provider"
authors = [{ name = "MatrixEditor" }]
maintainers = [{ name = "MatrixEditor" }]
readme = "docs/README.pypi.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Typing :: Typed",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]

dependencies = [
    "rich",
    "impacket",
    "scapy",
    "aiosmtpd",
    "sqlalchemy",
    "pyasn1",
    "aioquic",
    "typer",
    "jinja2",
    "typing-extensions",
    "caterpillar-py>=2.8.1",
    "pyipp",
]

[project.scripts]
dementor = "dementor.standalone:run_from_cli"
Dementor = "dementor.standalone:run_from_cli"

[project.urls]
homepage = "https://matrixeditor.github.io/dementor"
documentation = "https://matrixeditor.github.io/dementor"
source = "https://github.com/MatrixEditor/dementor"

[tool.setuptools.packages.find]
where = ["."]
include = ["dementor*"]

[tool.setuptools.package-data]
dementor = ["assets/**"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "shibuya",
    "sphinx-copybutton",
    "sphinx-design",
]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 90
src = ["dementor", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Type annotations — use ty for gradual typing instead
    "ANN",
    # Docstrings — too noisy for security tooling codebase
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",
    "D203",  # conflicts with D211
    "D212",  # conflicts with D213 (must pick one)
    "D213",  # conflicts with D212 (must pick one)
    "D401",  # imperative mood too opinionated
    # Naming — protocol code uses non-standard names (SMB_*, NBT_*, etc.)
    "N801", "N802", "N803", "N806", "N811", "N812", "N815", "N817",
    # Formatter conflict
    "COM812",
    # Import sorting — custom import grouping
    "I001",
    # String concatenation style
    "ISC003",
    # Boolean arguments — too strict for config-heavy protocol code
    "FBT",
    # Exception messages — too pedantic
    "TRY003", "EM101", "EM102",
    # Blind except — too many legitimate uses in protocol handlers
    "BLE001",
    # Security — intentional for a network security tool
    "S104", "S311",
    # Asserts are fine outside production paths
    "S101",
    # Implicit return None is idiomatic Python
    "RET503",
    # Complexity — protocol handlers are inherently complex
    "C901", "PLR0912", "PLR0913", "PLR0915",
    # Magic values — protocol code uses many numeric constants
    "PLR2004",
    # os.path → pathlib migration: low priority
    "PTH",
    # f-strings in logging are fine in modern Python
    "G004",
    # Shadowing builtins in arguments (type, id, etc.) — common in protocol code
    "A002",
    # Unused method arguments — many are interface/callback stubs
    "ARG002",
    # Line length — formatter handles what it can; rest are URLs/strings
    "E501",
    # Shebang on non-executable files
    "EXE002",
    # TODOs are intentional
    "FIX002", "TD002", "TD003",
    # Mutable class defaults — false positives with struct-like patterns
    "RUF012",
    # Private member access — common in internal wiring
    "SLF001",
    # Commented-out code — REVISIT notes, protocol reference tables, placeholders
    "ERA001",
    # Exception names like CloseConnection are idiomatic control-flow exceptions
    "N818",
    # Intentional non-ASCII in protocol strings/comments
    "RUF003",
    # Standalone script directories don't need __init__.py
    "INP001",
]

[tool.ruff.format]
docstring-code-format = true

# REVISIT: dynamic version
# [tool.setuptools_scm]
# version_file = "dementor/version.py"